infra/proxmox/host-config/etc/iptables/rules.v6
# Generated by ip6tables-save v1.8.11 on Mon Oct  5 07:33:40 2026
*mangle
:PREROUTING ACCEPT [5640648:799024396]
:INPUT ACCEPT [1264015:361513535]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1207833:172352049]
:POSTROUTING ACCEPT [1207833:172352049]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Mon Oct  5 07:33:40 2026
# Generated by ip6tables-save v1.8.11 on Mon Oct  5 07:33:40 2026
*nat
:PREROUTING ACCEPT [4376798:437482762]
:INPUT ACCEPT [5695:371269]
:OUTPUT ACCEPT [40217:3823926]
:POSTROUTING ACCEPT [40217:3823926]
:ts-postrouting - [0:0]
-A POSTROUTING -j ts-postrouting
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Mon Oct  5 07:33:40 2026
# Generated by ip6tables-save v1.8.11 on Mon Oct  5 07:33:40 2026
*raw
:PREROUTING ACCEPT [13028218:3443897923]
:OUTPUT ACCEPT [4240481:555097170]
COMMIT
# Completed on Mon Oct  5 07:33:40 2026
# Generated by ip6tables-save v1.8.11 on Mon Oct  5 07:33:40 2026
*filter
:INPUT ACCEPT [4266452:2538803450]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4240481:555097170]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -j ts-forward
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s fd7a:115c:a1e0::dc33:f640/128 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Mon Oct  5 07:33:40 2026
